--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-openai>=1.13.0
-python-dotenv>=1.0.0
-agents>=0.1.0
-python-telegram-bot>=20.7 
+python-dotenv==1.0.0
+pyTelegramBotAPI>=4.14.0
+openai-agents
